Set background color if node is matched to search text

--- a/src/app/tree/tree.component.html
+++ b/src/app/tree/tree.component.html
@@ -12,7 +12,7 @@
                     <li class="mat-tree-node">
                         <!-- use a disabled button to provide padding for tree leaf -->
                         <button mat-icon-button disabled></button>
-                        <label (click)="selectChildNode($event, node)">{{node.name}}</label>
+                        <label (click)="selectChildNode($event, node)" [ngStyle]="{'background-color': (node.searched === true) ? '#11e3e3' : 'white'}">{{node.name}}</label>
                     </li>
                 </mat-tree-node>
                 <!-- This is the tree node template for expandable nodes -->
@@ -25,7 +25,7 @@
                         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                         </mat-icon>
                     </button>
-                    <label>{{node.name}}</label>
+                    <label [ngStyle]="{'background-color': (node.searched === true) ? '#11e3e3' : 'white'}">{{node.name}}</label>
                     </div>
                     <ul [class.tree-view-invisible]="!treeControl.isExpanded(node)">
                     <ng-container matTreeNodeOutlet></ng-container>
@@ -74,5 +74,8 @@
                 </mat-nested-tree-node>
             </mat-tree>
         </div>
+    </div>
+    <div class="row col-sm-12">
+        <label style="text-align: center; width: 100%;">{{result}}</label>
     </div>
 </div>
