--- a/src/app/tree/tree.component.html
+++ b/src/app/tree/tree.component.html
@@ -12,11 +12,13 @@
                     <li class="mat-tree-node">
                         <!-- use a disabled button to provide padding for tree leaf -->
                         <button mat-icon-button disabled></button>
-                        <label (click)="selectChildNode($event, node)" [ngStyle]="{'background-color': (node.searched === true) ? '#11e3e3' : 'white'}">{{node.name}}</label>
+                        <label [ngStyle]="{'background-color': (node.searched === true) ? '#11e3e3' : 'white'}">
+                            <mat-checkbox>{{node.name}}</mat-checkbox>
+                        </label>
                     </li>
                 </mat-tree-node>
                 <!-- This is the tree node template for expandable nodes -->
-                <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild" (click)="selectChildNode($event, node)">
+                <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
                 <li>
                     <div class="mat-tree-node">
                     <button mat-icon-button matTreeNodeToggle
@@ -25,7 +27,9 @@
                         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                         </mat-icon>
                     </button>
-                    <label [ngStyle]="{'background-color': (node.searched === true) ? '#11e3e3' : 'white'}">{{node.name}}</label>
+                    <label [ngStyle]="{'background-color': (node.searched === true) ? '#11e3e3' : 'white'}">
+                        <mat-checkbox>{{node.name}}</mat-checkbox>
+                    </label>
                     </div>
                     <ul [class.tree-view-invisible]="!treeControl.isExpanded(node)">
                     <ng-container matTreeNodeOutlet></ng-container>
